feat: add generic user metadata filter
